@@ -9,6 +9,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
+    pyramid_mailer
 
 sqlalchemy.url = sqlite:///%(here)s/stalker_pyramid.db
 sqlalchemy.echo = false
