@@ -8,6 +8,15 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
+    pyramid_mailer
+
+mail.host = smtp.gmail.com
+mail.port = 465
+mail.authentication = true
+mail.username = anima.stalker.pyramid@gmail.com
+mail.password= animastalkerpyramid
+mail.ssl = true
+
 
 #sqlalchemy.url = sqlite:///%(here)s/stalker_pyramid.db
 sqlalchemy.url = postgresql+psycopg2://stalker_admin:stalker@localhost:5432/stalker
