@@ -8,6 +8,7 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
+    pyramid_mailer
 
 #sqlalchemy.url = sqlite:///%(here)s/stalker_pyramid.db
 sqlalchemy.url = postgresql+psycopg2://stalker_admin:stalker@127.0.0.1:5432/stalker
