@@ -14,6 +14,7 @@ requires = [
     'transaction',
     'pyramid_tm',
     'pyramid_debugtoolbar',
+    'pyramid_mailer',
     'zope.sqlalchemy',
     'waitress',
     'jinja2',
